--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,11 @@
-@import "tailwindcss";
+/*@import "../../node_modules/tailwindcss/dist/lib.d.mts";*/
 
 :root {
   --background: #ffffff;
   --foreground: #171717;
 }
+
+@tailwind utilities;
 
 @theme inline {
   --color-background: var(--background);
@@ -20,7 +22,7 @@
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
